gr-sys/header/gks.h

typedef char Gchar;
typedef double Gfloat;
typedef int Gint;
typedef unsigned int Guint;
/* Enumerations */

typedef enum
{ /* aspect control flag */
  GBUNDLED,
  GINDIVIDUAL
} Gasf;
typedef enum
{ /* clipping indicator */
  GCLIP,
  GNOCLIP
} Gclip;
typedef enum
{ /* device co-ord units */
  GDC_METRES,
  GDC_OTHER
} Gdevunits;
typedef enum
{ /* request status */
  GOK,
  GNONE
} Gistat;
typedef enum
{ /* horiz text alignment component */
  GAH_NORMAL,
  GAH_LEFT,
  GAH_CENTRE,
  GAH_RIGHT
} Gtxhor;
typedef enum
{ /* text precision */
  GP_STRING,
  GP_CHAR,
  GP_STROKE
} Gtxprec;
typedef enum
{ /* vert text alignment component */
  GAV_NORMAL,
  GAV_TOP,
  GAV_CAP,
  GAV_HALF,
  GAV_BASE,
  GAV_BOTTOM
} Gtxver;
typedef enum
{ /* WS category */
  GOUTPUT,
  GINPUT,
  GOUTIN,
  GWISS,
  GMO,
  GMI
} Gwscat;
/* Forward type definitions */

typedef struct
{         /* integer point */
  Gint x; /* x coordinate */
  Gint y; /* y coordinate */
} Gipoint;
typedef struct
{           /* coordinate point */
  Gfloat x; /* X coordinate */
  Gfloat y; /* Y coordinate */
} Gpoint;
typedef struct
{              /* coordinate limits */
  Gfloat xmin; /* x minimum limit */
  Gfloat xmax; /* x maximum limit */
  Gfloat ymin; /* y minimum limit */
  Gfloat ymax; /* y maximum limit */
} Glimit;
typedef struct
{               /* text facilities */
  Gint font;    /* text font */
  Gtxprec prec; /* text precision */
} Gtxfp;
typedef struct
{             /* text alignment */
  Gtxhor hor; /* horizontal component */
  Gtxver ver; /* vertical component */
} Gtxalign;
typedef struct
{            /* coordinate rectangle pointer */
  Gpoint ul; /* upper left point */
  Gpoint lr; /* lower right point */
} Grect;
typedef struct
{              /* dimension in integer values */
  Guint x_dim; /* X dimension */
  Guint y_dim; /* Y dimension */
} Gidim;
/* Structs */

typedef struct
{                 /* aspect source flags */
  Gasf ln_type;   /* line type */
  Gasf ln_width;  /* line width */
  Gasf ln_colour; /* line colour */
  Gasf mk_type;   /* marker type */
  Gasf mk_size;   /* marker size */
  Gasf mk_colour; /* marker colour */
  Gasf tx_fp;     /* text font and precision */
  Gasf tx_exp;    /* text expansion */
  Gasf tx_space;  /* text character spacing */
  Gasf tx_colour; /* text colour */
  Gasf fl_inter;  /* fill area interior style */
  Gasf fl_style;  /* fill area style index */
  Gasf fl_colour; /* fill area colour */
} Gasfs;
typedef struct
{               /* colour bundle */
  Gfloat red;   /* red intensity */
  Gfloat green; /* green intensity */
  Gfloat blue;  /* blue intensity */
} Gcobundl;
typedef struct
{             /* clipping rectangle */
  Gclip ind;  /* clipping indicator */
  Glimit rec; /* clipping rectangle */
} Gcliprect;
typedef struct
{                  /* display size */
  Gdevunits units; /* device coordinate units */
  Gpoint device;   /* device coordinate unit size */
  Gipoint raster;  /* raster unit size */
} Gdspsize;
typedef struct
{                  /* text extent */
  Gpoint concat;   /* concatenation point */
  Gpoint corner_1; /* corner 1 */
  Gpoint corner_2; /* corner 2 */
  Gpoint corner_3; /* corner 3 */
  Gpoint corner_4; /* corner 4 */
} Gextent;
typedef struct
{                  /* locator data */
  Gint transform;  /* normalization transformation number */
  Gpoint position; /* locator position */
} Gloc;
typedef struct
{                /* request locator */
  Gistat status; /* request status */
  Gloc loc;      /* locator data */
} Gqloc;
typedef struct
{                /* request string */
  Gistat status; /* request status */
  Gchar *string; /* string data */
} Gqstring;
typedef struct
{ /* scale vector */
  Gfloat x_scale;
  Gfloat y_scale;
} Gscale;
typedef struct
{           /* transformation */
  Glimit w; /* window */
  Glimit v; /* viewport */
} Gtran;
typedef struct
{              /* metafile item information */
  Gint type;   /* item type */
  Gint length; /* item length */
} Ggksmit;
/* GKS function prototypes */

DLLEXPORT void gks_init_gks(void);
DLLEXPORT void gks_open_gks(int errfil);
DLLEXPORT void gks_close_gks(void);
DLLEXPORT void gks_open_ws(int wkid, char *conid, int wtype);
DLLEXPORT void gks_close_ws(int wkid);
DLLEXPORT void gks_activate_ws(int wkid);
DLLEXPORT void gks_deactivate_ws(int wkid);
DLLEXPORT void gks_configure_ws(int wkid);
DLLEXPORT void gks_clear_ws(int wkid, int cofl);
DLLEXPORT void gks_redraw_seg_on_ws(int wkid);
DLLEXPORT void gks_update_ws(int wkid, int regfl);
DLLEXPORT void gks_set_deferral_state(int wkid, int defmo, int regmo);
DLLEXPORT void gks_escape(int funid, int dimidr, int *idr, int maxodr, int *lenodr, int *odr);
DLLEXPORT void gks_message(int wkid, char *message);
DLLEXPORT void gks_polyline(int n, double *pxa, double *pya);
DLLEXPORT void gks_polymarker(int n, double *pxa, double *pya);
DLLEXPORT void gks_text(double px, double py, char *str);
DLLEXPORT void gks_fillarea(int n, double *pxa, double *pya);
DLLEXPORT void gks_cellarray(double qx, double qy, double rx, double ry, int dimx, int dimy, int scol, int srow,
                             int ncol, int nrow, int *colia);
DLLEXPORT void gks_gdp(int n, double *px, double *py, int primid, int ldr, int *datrec);
DLLEXPORT void gks_set_pline_index(int index);
DLLEXPORT void gks_set_pline_linetype(int ltype);
DLLEXPORT void gks_set_pline_linewidth(double lwidth);
DLLEXPORT void gks_set_pline_color_index(int coli);
DLLEXPORT void gks_set_pmark_index(int index);
DLLEXPORT void gks_set_pmark_type(int mtype);
DLLEXPORT void gks_set_pmark_size(double mszsc);
DLLEXPORT void gks_set_pmark_color_index(int coli);
DLLEXPORT void gks_set_text_index(int index);
DLLEXPORT void gks_set_text_fontprec(int font, int prec);
DLLEXPORT void gks_set_text_expfac(double chxp);
DLLEXPORT void gks_set_text_spacing(double chsp);
DLLEXPORT void gks_set_text_color_index(int coli);
DLLEXPORT void gks_set_text_height(double chh);
DLLEXPORT double gks_inq_ws_text_height(double chh, double height);
DLLEXPORT void gks_set_text_upvec(double chux, double chuy);
DLLEXPORT void gks_set_text_path(int txp);
DLLEXPORT void gks_set_text_align(int txalh, int txalv);
DLLEXPORT void gks_set_fill_index(int index);
DLLEXPORT void gks_set_fill_int_style(int ints);
DLLEXPORT void gks_set_fill_style_index(int styli);
DLLEXPORT void gks_set_fill_color_index(int coli);
DLLEXPORT void gks_set_asf(int *flag);
DLLEXPORT void gks_set_color_rep(int wkid, int index, double red, double green, double blue);
DLLEXPORT void gks_set_window(int tnr, double xmin, double xmax, double ymin, double ymax);
DLLEXPORT void gks_set_viewport(int tnr, double xmin, double xmax, double ymin, double ymax);
DLLEXPORT void gks_select_xform(int tnr);
DLLEXPORT void gks_set_clipping(int clsw);
DLLEXPORT void gks_set_ws_window(int wkid, double xmin, double xmax, double ymin, double ymax);
DLLEXPORT void gks_set_ws_viewport(int wkid, double xmin, double xmax, double ymin, double ymax);
DLLEXPORT void gks_create_seg(int segn);
DLLEXPORT void gks_close_seg(void);
DLLEXPORT void gks_delete_seg(int segn);
DLLEXPORT void gks_assoc_seg_with_ws(int wkid, int segn);
DLLEXPORT void gks_copy_seg_to_ws(int wkid, int segn);
DLLEXPORT void gks_set_seg_xform(int segn, double mat[3][2]);
DLLEXPORT void gks_initialize_locator(int wkid, int lcdnr, int tnr, double px, double py, int pet, double xmin,
                                      double xmax, double ymin, double ymax, int ldr, char *datrec);
DLLEXPORT void gks_request_locator(int wkid, int lcdnr, int *stat, int *tnr, double *px, double *py);
DLLEXPORT void gks_request_stroke(int wkid, int skdnr, int n, int *stat, int *tnr, int *np, double *pxa, double *pya);
DLLEXPORT void gks_request_choice(int wkid, int chdnr, int *stat, int *chnr);
DLLEXPORT void gks_request_string(int wkid, int stdnr, int *stat, int *lostr, char *str);
DLLEXPORT void gks_read_item(int wkid, int lenidr, int maxodr, char *odr);
DLLEXPORT void gks_get_item(int wkid, int *type, int *lenodr);
DLLEXPORT void gks_interpret_item(int type, int lenidr, int dimidr, char *idr);
DLLEXPORT void gks_eval_xform_matrix(double fx, double fy, double transx, double transy, double phi, double scalex,
                                     double scaley, int coord, double tran[3][2]);
DLLEXPORT void gks_inq_operating_state(int *opsta);
DLLEXPORT void gks_inq_level(int *errind, int *lev);
DLLEXPORT void gks_inq_wstype(int n, int *errind, int *number, int *wtype);
DLLEXPORT void gks_inq_max_xform(int *errind, int *maxtnr);
DLLEXPORT void gks_inq_open_ws(int n, int *errind, int *ol, int *wkid);
DLLEXPORT void gks_inq_active_ws(int n, int *errind, int *ol, int *wkid);
DLLEXPORT void gks_inq_segn_ws(int wkid, int n, int *errind, int *ol, int *segn);
DLLEXPORT void gks_inq_color_rep(int wkid, int index, int type, int *errind, double *red, double *green, double *blue);