gr-sys/bindings/gks.rs

pub const Gtxprec_GP_STRING: Gtxprec = 0;
pub const Gtxprec_GP_CHAR: Gtxprec = 1;
pub const Gtxprec_GP_STROKE: Gtxprec = 2;
pub type Gtxprec = ::core::ffi::c_uint;
pub const Gtxver_GAV_NORMAL: Gtxver = 0;
pub const Gtxver_GAV_TOP: Gtxver = 1;
pub const Gtxver_GAV_CAP: Gtxver = 2;
pub const Gtxver_GAV_HALF: Gtxver = 3;
pub const Gtxver_GAV_BASE: Gtxver = 4;
pub const Gtxver_GAV_BOTTOM: Gtxver = 5;
pub type Gtxver = ::core::ffi::c_uint;
pub const Gwscat_GOUTPUT: Gwscat = 0;
pub const Gwscat_GINPUT: Gwscat = 1;
pub const Gwscat_GOUTIN: Gwscat = 2;
pub const Gwscat_GWISS: Gwscat = 3;
pub const Gwscat_GMO: Gwscat = 4;
pub const Gwscat_GMI: Gwscat = 5;
pub type Gwscat = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gipoint {
    pub x: Gint,
    pub y: Gint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gpoint {
    pub x: Gfloat,
    pub y: Gfloat,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Glimit {
    pub xmin: Gfloat,
    pub xmax: Gfloat,
    pub ymin: Gfloat,
    pub ymax: Gfloat,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gtxfp {
    pub font: Gint,
    pub prec: Gtxprec,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gtxalign {
    pub hor: Gtxhor,
    pub ver: Gtxver,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Grect {
    pub ul: Gpoint,
    pub lr: Gpoint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gidim {
    pub x_dim: Guint,
    pub y_dim: Guint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gasfs {
    pub ln_type: Gasf,
    pub ln_width: Gasf,
    pub ln_colour: Gasf,
    pub mk_type: Gasf,
    pub mk_size: Gasf,
    pub mk_colour: Gasf,
    pub tx_fp: Gasf,
    pub tx_exp: Gasf,
    pub tx_space: Gasf,
    pub tx_colour: Gasf,
    pub fl_inter: Gasf,
    pub fl_style: Gasf,
    pub fl_colour: Gasf,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gcobundl {
    pub red: Gfloat,
    pub green: Gfloat,
    pub blue: Gfloat,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gcliprect {
    pub ind: Gclip,
    pub rec: Glimit,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gdspsize {
    pub units: Gdevunits,
    pub device: Gpoint,
    pub raster: Gipoint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gextent {
    pub concat: Gpoint,
    pub corner_1: Gpoint,
    pub corner_2: Gpoint,
    pub corner_3: Gpoint,
    pub corner_4: Gpoint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gloc {
    pub transform: Gint,
    pub position: Gpoint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gqloc {
    pub status: Gistat,
    pub loc: Gloc,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gqstring {
    pub status: Gistat,
    pub string: *mut Gchar,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gscale {
    pub x_scale: Gfloat,
    pub y_scale: Gfloat,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Gtran {
    pub w: Glimit,
    pub v: Glimit,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Ggksmit {
    pub type_: Gint,
    pub length: Gint,
}
extern "C" {
    pub fn gks_init_gks();
}
extern "C" {
    pub fn gks_open_gks(errfil: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_close_gks();
}
extern "C" {
    pub fn gks_open_ws(
        wkid: ::core::ffi::c_int,
        conid: *mut ::core::ffi::c_char,
        wtype: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_close_ws(wkid: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_activate_ws(wkid: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_deactivate_ws(wkid: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_configure_ws(wkid: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_clear_ws(wkid: ::core::ffi::c_int, cofl: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_redraw_seg_on_ws(wkid: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_update_ws(wkid: ::core::ffi::c_int, regfl: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_deferral_state(
        wkid: ::core::ffi::c_int,
        defmo: ::core::ffi::c_int,
        regmo: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_escape(
        funid: ::core::ffi::c_int,
        dimidr: ::core::ffi::c_int,
        idr: *mut ::core::ffi::c_int,
        maxodr: ::core::ffi::c_int,
        lenodr: *mut ::core::ffi::c_int,
        odr: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_message(wkid: ::core::ffi::c_int, message: *mut ::core::ffi::c_char);
}
extern "C" {
    pub fn gks_polyline(n: ::core::ffi::c_int, pxa: *mut f64, pya: *mut f64);
}
extern "C" {
    pub fn gks_polymarker(n: ::core::ffi::c_int, pxa: *mut f64, pya: *mut f64);
}
extern "C" {
    pub fn gks_text(px: f64, py: f64, str_: *mut ::core::ffi::c_char);
}
extern "C" {
    pub fn gks_fillarea(n: ::core::ffi::c_int, pxa: *mut f64, pya: *mut f64);
}
extern "C" {
    pub fn gks_cellarray(
        qx: f64,
        qy: f64,
        rx: f64,
        ry: f64,
        dimx: ::core::ffi::c_int,
        dimy: ::core::ffi::c_int,
        scol: ::core::ffi::c_int,
        srow: ::core::ffi::c_int,
        ncol: ::core::ffi::c_int,
        nrow: ::core::ffi::c_int,
        colia: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_gdp(
        n: ::core::ffi::c_int,
        px: *mut f64,
        py: *mut f64,
        primid: ::core::ffi::c_int,
        ldr: ::core::ffi::c_int,
        datrec: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_set_pline_index(index: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_pline_linetype(ltype: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_pline_linewidth(lwidth: f64);
}
extern "C" {
    pub fn gks_set_pline_color_index(coli: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_pmark_index(index: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_pmark_type(mtype: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_pmark_size(mszsc: f64);
}
extern "C" {
    pub fn gks_set_pmark_color_index(coli: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_text_index(index: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_text_fontprec(font: ::core::ffi::c_int, prec: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_text_expfac(chxp: f64);
}
extern "C" {
    pub fn gks_set_text_spacing(chsp: f64);
}
extern "C" {
    pub fn gks_set_text_color_index(coli: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_text_height(chh: f64);
}
extern "C" {
    pub fn gks_inq_ws_text_height(chh: f64, height: f64) -> f64;
}
extern "C" {
    pub fn gks_set_text_upvec(chux: f64, chuy: f64);
}
extern "C" {
    pub fn gks_set_text_path(txp: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_text_align(txalh: ::core::ffi::c_int, txalv: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_fill_index(index: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_fill_int_style(ints: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_fill_style_index(styli: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_fill_color_index(coli: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_asf(flag: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_color_rep(
        wkid: ::core::ffi::c_int,
        index: ::core::ffi::c_int,
        red: f64,
        green: f64,
        blue: f64,
    );
}
extern "C" {
    pub fn gks_set_window(tnr: ::core::ffi::c_int, xmin: f64, xmax: f64, ymin: f64, ymax: f64);
}
extern "C" {
    pub fn gks_set_viewport(tnr: ::core::ffi::c_int, xmin: f64, xmax: f64, ymin: f64, ymax: f64);
}
extern "C" {
    pub fn gks_select_xform(tnr: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_clipping(clsw: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_ws_window(wkid: ::core::ffi::c_int, xmin: f64, xmax: f64, ymin: f64, ymax: f64);
}
extern "C" {
    pub fn gks_set_ws_viewport(
        wkid: ::core::ffi::c_int,
        xmin: f64,
        xmax: f64,
        ymin: f64,
        ymax: f64,
    );
}
extern "C" {
    pub fn gks_create_seg(segn: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_close_seg();
}
extern "C" {
    pub fn gks_delete_seg(segn: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_assoc_seg_with_ws(wkid: ::core::ffi::c_int, segn: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_copy_seg_to_ws(wkid: ::core::ffi::c_int, segn: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_seg_xform(segn: ::core::ffi::c_int, mat: *mut [f64; 2usize]);
}
extern "C" {
    pub fn gks_initialize_locator(
        wkid: ::core::ffi::c_int,
        lcdnr: ::core::ffi::c_int,
        tnr: ::core::ffi::c_int,
        px: f64,
        py: f64,
        pet: ::core::ffi::c_int,
        xmin: f64,
        xmax: f64,
        ymin: f64,
        ymax: f64,
        ldr: ::core::ffi::c_int,
        datrec: *mut ::core::ffi::c_char,
    );
}
extern "C" {
    pub fn gks_request_locator(
        wkid: ::core::ffi::c_int,
        lcdnr: ::core::ffi::c_int,
        stat: *mut ::core::ffi::c_int,
        tnr: *mut ::core::ffi::c_int,
        px: *mut f64,
        py: *mut f64,
    );
}
extern "C" {
    pub fn gks_request_stroke(
        wkid: ::core::ffi::c_int,
        skdnr: ::core::ffi::c_int,
        n: ::core::ffi::c_int,
        stat: *mut ::core::ffi::c_int,
        tnr: *mut ::core::ffi::c_int,
        np: *mut ::core::ffi::c_int,
        pxa: *mut f64,
        pya: *mut f64,
    );
}
extern "C" {
    pub fn gks_request_choice(
        wkid: ::core::ffi::c_int,
        chdnr: ::core::ffi::c_int,
        stat: *mut ::core::ffi::c_int,
        chnr: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_request_string(
        wkid: ::core::ffi::c_int,
        stdnr: ::core::ffi::c_int,
        stat: *mut ::core::ffi::c_int,
        lostr: *mut ::core::ffi::c_int,
        str_: *mut ::core::ffi::c_char,
    );
}
extern "C" {
    pub fn gks_read_item(
        wkid: ::core::ffi::c_int,
        lenidr: ::core::ffi::c_int,
        maxodr: ::core::ffi::c_int,
        odr: *mut ::core::ffi::c_char,
    );
}
extern "C" {
    pub fn gks_get_item(
        wkid: ::core::ffi::c_int,
        type_: *mut ::core::ffi::c_int,
        lenodr: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_interpret_item(
        type_: ::core::ffi::c_int,
        lenidr: ::core::ffi::c_int,
        dimidr: ::core::ffi::c_int,
        idr: *mut ::core::ffi::c_char,
    );
}
extern "C" {
    pub fn gks_eval_xform_matrix(
        fx: f64,
        fy: f64,
        transx: f64,
        transy: f64,
        phi: f64,
        scalex: f64,
        scaley: f64,
        coord: ::core::ffi::c_int,
        tran: *mut [f64; 2usize],
    );
}
extern "C" {
    pub fn gks_inq_operating_state(opsta: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_level(errind: *mut ::core::ffi::c_int, lev: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_wstype(
        n: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        number: *mut ::core::ffi::c_int,
        wtype: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_max_xform(errind: *mut ::core::ffi::c_int, maxtnr: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_open_ws(
        n: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        ol: *mut ::core::ffi::c_int,
        wkid: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_active_ws(
        n: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        ol: *mut ::core::ffi::c_int,
        wkid: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_segn_ws(
        wkid: ::core::ffi::c_int,
        n: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        ol: *mut ::core::ffi::c_int,
        segn: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_color_rep(
        wkid: ::core::ffi::c_int,
        index: ::core::ffi::c_int,
        type_: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        red: *mut f64,
        green: *mut f64,
        blue: *mut f64,
    );
}
